--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Object file
-*.o
+# Created by https://www.toptal.com/developers/gitignore/api/microsoftoffice
+# Edit at https://www.toptal.com/developers/gitignore?templates=microsoftoffice
 
-# Ada Library Information
-*.ali
+### MicrosoftOffice ###
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
+
+# End of https://www.toptal.com/developers/gitignore/api/microsoftoffice
